test/arrays/errors/nilStorageNonNilAssocArr.bad
nilStorageNonNilAssocArr.chpl:23: error: halt reached - argument to ! is nil
